kubernetes/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mhawk-deployment
  namespace: mhawk
  labels:
    app.kubernetes.io/name: mhawk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mhawk
  template:
      metadata:
        labels:
          app: mhawk
      spec:
        containers:
          - name: app
            image: kieranbamforth/mhawk:45
            ports:
              - containerPort: 3000
            resources:
              limits:
                memory: "400Mi"
              requests:
                cpu: 50m
                memory: "300Mi"
            securityContext:
              readOnlyRootFilesystem: true
              runAsNonRoot: true
              runAsUser: 1000
